--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql6.freemysqlhosting.net
 DB_PORT=3306
-DB_DATABASE=riafy
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=sql6429035
+DB_USERNAME=sql6429035
+DB_PASSWORD=cYmQ8R1Fm8
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
